prevent too wide lyric-box

--- a/public/style.css
+++ b/public/style.css
@@ -174,6 +174,8 @@ progress:indeterminate::-webkit-progress-bar  {
     opacity: 0.8;
     border-radius: 5px;
     white-space: pre;
+    word-wrap: break-word;
+    max-width: 400px;
 }
 
 #mediaDB::-webkit-scrollbar,
